--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,11 +6,6 @@
     #container {
         display: none;
     }
-
-    body,
-    #rotate-box {
-        background-color: #fff;
-    }
 }
 
 @media only screen and (orientation:landscape) {
@@ -21,17 +16,18 @@
     #container {
         display: block;
     }
-
-    body,
-    #container {
-        background-color: #363;
-    }
 }
 
 body {
     margin: 0;;
     display: flex;
     align-items: center;
+    background-color: white;
+}
+
+#container {
+    width: 100%;
+    height: 100%;
 }
 
 .tile {
@@ -319,5 +315,4 @@ body {
     right: 3vw;
     top: 3vh;
     width: 3vw;
-    height: 3vw;
 }
