--- a/frontend/style.css
+++ b/frontend/style.css
@@ -48,15 +48,15 @@ body {
 }
 
 .tile-v {
-    margin: 0.2vw 0.2vw;
-    width: 3.0vw;
-    height: 4.0vw;
+    /* margin: 0.2vw 0.2vw; */
+    width: 3.3vw;
+    height: 4.4vw;
 }
 
 .tile-h {
-    margin: 0.2vh 0.2vh;
+    /* margin: 0.2vh 0.2vh; */
     width: 6.0vh;
-    height: 5.0vh;
+    height: 4.5vh;
 }
 
 /* .tile-bottom { transform: translateX(-2.0vw); } */
@@ -82,7 +82,7 @@ body {
 
 #pos-bottom > .tile-bk {
     width: 2.5vw;
-    margin-top: 1vw;
+    margin-top: 0.5vw;
 }
 
 .tile-img-top,
@@ -123,9 +123,9 @@ body {
 }
 
 #pos-bottom {
-    left: 5vw;
+    left: 1vw;
     top: 82.5vh;
-    scale: 1.5;
+    scale: 2.0;
     z-index: 3;
     transform-origin: top left;
 }
@@ -137,7 +137,7 @@ body {
 
 #pos-right {
     left: 85vw;
-    bottom: 22.5vh;
+    bottom: 30vh;
 }
 
 .label {
@@ -205,23 +205,26 @@ body {
 #action-box {
     position: fixed;
     left: 50vw;
-    top: 72.5vh;
+    top: 70vh;
     transform: translate(-50%, -50%);
     margin: 0 auto;
+    background-color: #0004;
+    padding: 10px;
+    border-radius: 1000px;
+    z-index: 10;
 }
 
 .action {
     min-width: 5vw;
     max-width: 5vw;
-    min-height: 3vw;
-    max-height: 3vw;
+    min-height: 5vw;
+    max-height: 5vw;
     margin: 0.2vh 0.2vw;
-    /* padding: 0.2vh 0.2vw; */
-    font-size: 1.75vw;
+    font-size: 3vw;
     font-weight: bold;
     background-color: #fffd;
     border: 0;
-    border-radius: 2vh;
+    border-radius: 1000px;
     cursor: pointer;
 }
 
@@ -252,15 +255,14 @@ body {
 #menu-box {
     margin: auto;
     text-align: center;
-    padding: 10px;
-    background-color: #363;
+    padding: 30px;
     border-radius: 20px;
     position: fixed;
     z-index: 10;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow:  10px 8px 10px 5px black;   
+    box-shadow:  10px 8px 10px 5px black;
 }
 
 #menu-mask {
@@ -282,10 +284,11 @@ body {
 
 #tag-box {
     position: fixed;
-    right: 3vw;
+    right: 1vw;
     bottom: 3vh;
     color: white;
-    font-size: 3vh;
+    font-size: 2vh;
+    text-align: right;
 }
 
 .row {
